# Fingerprint-browser

./: .gitignore  API.md  Cargo.toml  README.md  ads-hubstudio.db  config.toml  fingerprint.py  y  y.pub
clients/: Cargo.toml
clients/src/: lib.rs  main.rs
cmds/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  errors.rs  lib.rs
crates/core/src/apis/: mod.rs
crates/core/src/models/: browser.rs  cookie.rs  gpu.rs  mod.rs  ua.rs
crates/core/src/utils/: command.rs  common.rs  encryption.rs  fs.rs  mod.rs
crates/lp-apis/: Cargo.toml
crates/lp-apis/src/: lib.rs  main.rs  middlewares.rs
crates/lp-apis/src/entities/: browser.rs  environment.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  message.rs
crates/lp-apis/src/handles/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_proxy_group.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  message.rs  mod.rs  operation_log.rs  team.rs  team_group.rs  user.rs
crates/lp-apis/src/middlewares/: auth.rs
crates/lp-apis/src/routes/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  team_group.rs  user.rs
crates/lp-commons/: Cargo.toml
crates/lp-commons/src/: database.rs  encryption.rs  lib.rs  time.rs  util.rs
crates/lp-cores/: Cargo.toml
crates/lp-cores/src/: lib.rs  processor.rs  requests.rs
crates/lp-services/: Cargo.toml
crates/lp-services-remote/: Cargo.toml
crates/lp-services-remote/src/: lib.rs  requests.rs
crates/lp-services-remote/src/requests/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_proxy_group.rs  environment_tag.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  kernel_versions.rs  message.rs  operation_log.rs  team.rs  team_group.rs  user.rs
crates/lp-services/src/: allowed_operation.rs  command.rs  environment.rs  environment_account.rs  environment_fingerprint.rs  environment_group.rs  environment_proxy.rs  environment_proxy_group.rs  environment_transfer_history.rs  environment_trash.rs  environmnet_cookie.rs  error.rs  extension.rs  lib.rs  operation_log.rs  permission.rs  resource_whitelist.rs  team.rs  team_group.rs  user.rs  user_team_temp.rs
crates/lp-views/: Cargo.toml  tauri.conf.json
crates/lp-views/capabilities/: default.json
crates/lp-views/icons/: icon.icns
crates/lp-views/src/: lib.rs  main.rs
crates/lp-views/src/command/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_proxy_group.rs  environment_tag.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  kernel.rs  message.rs  mod.rs  operation_log.rs  team.rs  team_group.rs  updator.rs  user.rs
crates/lp-views/src/components/windows/: tray.rs
crates/server/: Cargo.toml
crates/server/src/: browser.rs  environment.rs  group.rs  lib.rs  middlewares.rs  response.rs
crates/server/src/routes/: browser.rs  environment.rs  group.rs  mod.rs  user.rs
crates/services/: Cargo.toml
crates/services-remote/: Cargo.toml
crates/services-remote/src/: lib.rs  requests.rs
crates/services-remote/src/requests/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_proxy_group.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  message.rs  operation_log.rs  team.rs  team_group.rs  user.rs
crates/services/src/: allowed_operation.rs  command.rs  environment.rs  environment_account.rs  environment_fingerprint.rs  environment_group.rs  environment_proxy.rs  environment_proxy_group.rs  environment_transfer_history.rs  environment_trash.rs  environmnet_cookie.rs  error.rs  extension.rs  fingerprint.rs  group.rs  lib.rs  operation_log.rs  permission.rs  proxy.rs  resource_whitelist.rs  team.rs  team_group.rs  user.rs  user_team_temp.rs
crates/states/: Cargo.toml
crates/states/src/: config.rs  database.rs  lib.rs  tauri.rs
crates/views/: Cargo.toml  tauri.conf.json
crates/views/src/: command.rs  lib.rs  main.rs  response.rs
crates/views/src/command/: browser.rs  environment.rs  environment_account.rs  environment_cookie.rs  environment_fingerprint.rs  environment_group.rs  environment_proxies.rs  environment_proxy.rs  environment_proxy_group.rs  environment_transfer_history.rs  environment_trash.rs  extension.rs  fingerprint.rs  group.rs  message.rs  mod.rs  operation_log.rs  os.rs  proxy.rs  team.rs  team_group.rs  updator.rs  user.rs  user_team_temp.rs
crates/views/src/components/windows/: tray.rs
front/: .env  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  text.txt  vite.config.ts
frontend/: components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
logs/: process_list_1732616467142.txt  process_list_1732616510928.txt  process_list_1732687701399.txt  process_list_1732687764190.txt  process_list_1732860003248.txt
migrations/: 20241130060607_create_environments_table.sql  20241130060607_create_fingerprint_table.sql  20241130060613_create_groups_table.sql  20241130090551_create_environments_table.sql  20241130090551_create_fingerprint_table.sql  20241218034957_create_proxy_table.sql  20241218081336_create_user_table.sql  20241219094728_create_resource_whitelist_table.sql  20241220030149_create_user_group_relations_table.sql  20241224023636_create_team_table.sql  20241224023646_create_user_team_relations_table.sql  20241224025721_create_team_groups_table.sql  20241224025730_create_team_group_relations_table.sql  20241224030525_create_environment_transfer_table.sql  20241224134801_environment_accounts.sql  (+28 more)
(+656 files in other folders)
