[workspace]
resolver = "1"
# members = ["cmds", "crates/cores", "crates/server", "crates/views", "tests"]
members = ["clients", "crates/cores", "crates/server", "crates/views", "tests"]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
mio = "1.0.1"
thiserror = "1.0.63"
anyhow = "1.0.93"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
chrono = "0.4"
aes-gcm = "0.10.3"
rand = "0.8.5"
winapi = { version = "0.3", features = ["dpapi", "winerror"] }
lazy_static = "1.5.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "=0.1.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json", "default"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
log = "0.4"
tauri = { version = "2.1.0" }
tauri-plugin-log = { version = "2.0.0-rc" }
tauri-plugin-os = "2.0.1"
thirtyfour = "0.35.0"

# internal crate dependencies
cores = { path = "./crates/cores" }
server = { path = "./crates/server" }
views = { path = "./crates/views" }
