[workspace]
resolver = "1"
members = [
  "crates/lp-apis",
  "crates/lp-cores",
  "crates/lp-commons",
  "crates/lp-models",
  "crates/lp-services",
  "crates/lp-services-remote",
  "crates/lp-states",
  "crates/lp-views",
]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
mio = "1.0.1"
thiserror = "1.0.63"
anyhow = "1.0.93"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
chrono = "0.4"
aes-gcm = "0.10.3"
rand = "0.8.5"
md5 = "0.7"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
argon2 = "0.5.3"
winapi = { version = "0.3", features = ["dpapi", "winerror", "winreg"] }
lazy_static = "1.5.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "=0.1.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json", "default"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["tray-icon", "default"] }
tauri-plugin-log = { version = "2.0.0-rc" }
dirs = "5.0.1"
thirtyfour = "0.35.0"
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
regex = "1.5.4"
lettre = "0.11"
zip = "2.2.2"

# internal crate dependencies
lp_apis = { path = "./crates/lp-apis" }
lp_cores = { path = "./crates/lp-cores" }
lp_commons = { path = "./crates/lp-commons" }
lp_models = { path = "./crates/lp-models" }
lp_services = { path = "./crates/lp-services" }
lp_services_remote = { path = "./crates/lp-services-remote" }
lp_states = { path = "./crates/lp-states" }
lp_views = { path = "./crates/lp-views" }

[profile.release]
debug = false