[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# cores = { workspace = true }
# server = { workspace = true }
# views = { workspace = true }

commons = { workspace = true }
states = { workspace = true }
apis = { workspace = true }

[[bin]]
name = "api"
path = "src/bin/api.rs"
