[package]
name = "lp_commons"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
md5 = { workspace = true }
jwt = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
mio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
winapi = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
lettre = { workspace = true }
zip = { workspace = true }
