[package]
name = "lp_cores"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lp_states = { workspace = true }
lp_models = { workspace = true }
lp_commons = { workspace = true }
