[package]
name = "lp_services_remote"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

lp_commons = { workspace = true }
lp_cores = { workspace = true }
lp_models = { workspace = true }
lp_states = { workspace = true }
