[package]
name = "lp_services"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }

lp_commons = { workspace = true }
lp_cores = { workspace = true }
lp_services_remote = { workspace = true }
lp_states = { workspace = true }
lp_models = { workspace = true }
