[package]
name = "lp_views"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

lp_cores = { workspace = true }
lp_commons = { workspace = true }
lp_models = { workspace = true }
lp_services = { workspace = true }
lp_services_remote = { workspace = true }
lp_states = { workspace = true }
tauri-plugin-theme = "2.1.2"

[lib]
name = "views"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
