[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }

commons = { workspace = true }
states = { workspace = true }
models = { workspace = true }
cores = { workspace = true }
services_remote = { workspace = true }
