[package]
name = "states"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }

commons = { workspace = true }
