[package]
name = "views"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true }

cores = { workspace = true }

[lib]
name = "views"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
